[package]
name = "snowdrift"
description="Generates 64 bit IDs based on the same ideas as Twitter's Snowflake ID project"
version = "0.1.0"
authors = ["Dermot Haughey <hderms@gmail.com>"]
edition = "2018"
license="MIT"

[dependencies]
hyper = { version = "0.14.4", features = ["full"] }
tokio = { version = "1.2.0", features = ["full"] }
